--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,15 +5,15 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-1.34MB/s(Youtube:不良林), server: 38.68.134.85, port: 8008, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
-  - {name: 🇨🇳 中国-853.3KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34004, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇳🇱 荷兰-1.54MB/s(Youtube:不良林), server: 213.183.59.185, port: 9031, type: ss, cipher: aes-256-cfb, password: BwcAUZk8hUFAkDGN}
-  - {name: 🇺🇸 美国-1.06MB/s(Youtube:不良林), server: 38.114.114.69, port: 8000, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
-  - {name: 🇷🇺 俄罗斯联邦-202.7KB/s(Youtube:不良林), server: 213.183.53.208, port: 9040, type: ss, cipher: aes-256-cfb, password: p9z5BVADH2YFs3MN}
+  - {name: 🇸🇬 新加坡-1.51MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.58MB/s(Youtube:不良林), server: 38.114.114.19, port: 6379, type: ss, cipher: aes-256-gcm, password: zDNVedRFPQexG9v}
+  - {name: 🇺🇸 美国-1.00MB/s(Youtube:不良林), server: 38.114.114.19, port: 3389, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇺🇸 美国-1.80MB/s(Youtube:不良林), server: 38.86.135.27, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
+  - {name: 🇺🇸 美国-924.2KB/s(Youtube:不良林), server: 38.121.43.71, port: 3306, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇺🇸 美国-1.44MB/s(Youtube:不良林), server: 38.114.114.69, port: 6379, type: ss, cipher: aes-256-gcm, password: zDNVedRFPQexG9v}
+  - {name: 🇺🇸 美国-1.97MB/s(Youtube:不良林), server: 38.68.134.85, port: 5600, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
   - {name: 🇺🇸 美国-1.51MB/s(Youtube:不良林), server: 38.121.43.71, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
-  - {name: 🇺🇸 美国-2.62MB/s(Youtube:不良林), server: 38.114.114.69, port: 6697, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
-  - {name: 🇺🇸 美国-970.5KB/s(Youtube:不良林), server: 38.68.135.19, port: 6379, type: ss, cipher: aes-256-gcm, password: zDNVedRFPQexG9v}
-  - {name: 🇺🇸 美国-1.75MB/s(Youtube:不良林), server: ifffffffuuuuuuus.qiqicdn2.cf, port: 443, type: vmess, uuid: 5a36cce4-0527-4d36-bf4a-6c215ef9c524, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /5a36cce4-0527-4d36-bf4a-6c215ef9c524-vmess, ws-headers: {Host: ifffffffuuuuuuus.qiqicdn2.cf}}
+  - {name: 🇺🇸 美国-2.26MB/s(Youtube:不良林), server: 38.114.114.69, port: 6697, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
   - {name: 🇨🇦 加拿大-1.42MB/s(Youtube:不良林), server: 134.195.198.95, port: 443, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
 proxy-groups:
   - name: 🔰 节点选择
@@ -21,30 +21,30 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.34MB/s(Youtube:不良林)
-      - 🇨🇳 中国-853.3KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.54MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.06MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-202.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.80MB/s(Youtube:不良林)
+      - 🇺🇸 美国-924.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.44MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.97MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
-      - 🇺🇸 美国-970.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.75MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.26MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.42MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-1.34MB/s(Youtube:不良林)
-      - 🇨🇳 中国-853.3KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.54MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.06MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-202.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.80MB/s(Youtube:不良林)
+      - 🇺🇸 美国-924.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.44MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.97MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
-      - 🇺🇸 美国-970.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.75MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.26MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.42MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
@@ -52,15 +52,15 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.34MB/s(Youtube:不良林)
-      - 🇨🇳 中国-853.3KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.54MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.06MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-202.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.80MB/s(Youtube:不良林)
+      - 🇺🇸 美国-924.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.44MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.97MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
-      - 🇺🇸 美国-970.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.75MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.26MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.42MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
@@ -72,30 +72,30 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-1.34MB/s(Youtube:不良林)
-      - 🇨🇳 中国-853.3KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.54MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.06MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-202.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.80MB/s(Youtube:不良林)
+      - 🇺🇸 美国-924.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.44MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.97MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
-      - 🇺🇸 美国-970.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.75MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.26MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.42MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.34MB/s(Youtube:不良林)
-      - 🇨🇳 中国-853.3KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.54MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.06MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-202.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.80MB/s(Youtube:不良林)
+      - 🇺🇸 美国-924.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.44MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.97MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
-      - 🇺🇸 美国-970.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.75MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.26MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.42MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
@@ -103,15 +103,15 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.34MB/s(Youtube:不良林)
-      - 🇨🇳 中国-853.3KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.54MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.06MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-202.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.80MB/s(Youtube:不良林)
+      - 🇺🇸 美国-924.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.44MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.97MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
-      - 🇺🇸 美国-970.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.75MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.26MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.42MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
@@ -128,15 +128,15 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.34MB/s(Youtube:不良林)
-      - 🇨🇳 中国-853.3KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.54MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.06MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-202.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.80MB/s(Youtube:不良林)
+      - 🇺🇸 美国-924.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.44MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.97MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
-      - 🇺🇸 美国-970.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.75MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.26MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.42MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
