--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇸🇬 新加坡-1.51MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.58MB/s(Youtube:不良林), server: 38.114.114.19, port: 6379, type: ss, cipher: aes-256-gcm, password: zDNVedRFPQexG9v}
-  - {name: 🇺🇸 美国-1.00MB/s(Youtube:不良林), server: 38.114.114.19, port: 3389, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇷🇺 俄罗斯联邦-589.0KB/s(Youtube:不良林), server: 213.183.53.212, port: 9053, type: ss, cipher: aes-256-cfb, password: SBM7R883jBmnqe6C}
+  - {name: 🇺🇸 美国-1.17MB/s(Youtube:不良林), server: 38.86.135.27, port: 8009, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
+  - {name: 🇺🇸 美国-971.8KB/s(Youtube:不良林), server: 38.121.43.71, port: 8888, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇺🇸 美国-720.3KB/s(Youtube:不良林), server: 38.68.134.85, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
   - {name: 🇺🇸 美国-1.80MB/s(Youtube:不良林), server: 38.86.135.27, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
-  - {name: 🇺🇸 美国-924.2KB/s(Youtube:不良林), server: 38.121.43.71, port: 3306, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
   - {name: 🇺🇸 美国-1.44MB/s(Youtube:不良林), server: 38.114.114.69, port: 6379, type: ss, cipher: aes-256-gcm, password: zDNVedRFPQexG9v}
   - {name: 🇺🇸 美国-1.97MB/s(Youtube:不良林), server: 38.68.134.85, port: 5600, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
   - {name: 🇺🇸 美国-1.51MB/s(Youtube:不良林), server: 38.121.43.71, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-1.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.58MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.00MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-589.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-971.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-720.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.80MB/s(Youtube:不良林)
-      - 🇺🇸 美国-924.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.44MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.97MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.51MB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇸🇬 新加坡-1.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.58MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.00MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-589.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-971.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-720.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.80MB/s(Youtube:不良林)
-      - 🇺🇸 美国-924.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.44MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.97MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.51MB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-1.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.58MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.00MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-589.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-971.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-720.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.80MB/s(Youtube:不良林)
-      - 🇺🇸 美国-924.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.44MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.97MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.51MB/s(Youtube:不良林)
@@ -72,11 +72,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇸🇬 新加坡-1.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.58MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.00MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-589.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-971.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-720.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.80MB/s(Youtube:不良林)
-      - 🇺🇸 美国-924.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.44MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.97MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.51MB/s(Youtube:不良林)
@@ -87,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-1.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.58MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.00MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-589.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-971.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-720.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.80MB/s(Youtube:不良林)
-      - 🇺🇸 美国-924.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.44MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.97MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.51MB/s(Youtube:不良林)
@@ -103,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇸🇬 新加坡-1.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.58MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.00MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-589.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-971.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-720.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.80MB/s(Youtube:不良林)
-      - 🇺🇸 美国-924.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.44MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.97MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.51MB/s(Youtube:不良林)
@@ -128,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇸🇬 新加坡-1.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.58MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.00MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-589.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-971.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-720.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.80MB/s(Youtube:不良林)
-      - 🇺🇸 美国-924.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.44MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.97MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.51MB/s(Youtube:不良林)
